fixing scrolling bug on ios

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -149,7 +149,7 @@ body{
     margin-bottom: 10px;
     height:80vh;
     width:100%;
-    overflow-y: scroll; /* has to be scroll, not auto */
+    overflow-y: scroll;
     overflow-x: hidden;
     -webkit-overflow-scrolling: touch;
 }
@@ -158,17 +158,20 @@ body{
 {
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
     background-color: #F5F5F5;
+    -webkit-overflow-scrolling: touch;
 }
 
 #messageOutput::-webkit-scrollbar
 {
     width: 6px;
     background-color: #F5F5F5;
+    -webkit-overflow-scrolling: touch;
 }
 
 #messageOutput::-webkit-scrollbar-thumb
 {
     background-color: #000000;
+    -webkit-overflow-scrolling: touch;
 }
 
 #messageOutput ul{
@@ -285,23 +288,6 @@ body{
     font-weight: 300;
     text-align: center;
 }
-
-::-webkit-input-placeholder {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-:-moz-placeholder {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-::-moz-placeholder {
-    color: rgba(255, 255, 255, 0.9);
-}
-
-:-ms-input-placeholder {
-    color: rgba(255, 255, 255, 0.9);
-}
-
 
 @media (max-width: 600px) {
     body{
